--- a/index.html
+++ b/index.html
@@ -74,18 +74,10 @@
               </div>
 
               <div class="col-sm-8">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae at, adipisci esse fugiat aliquam
-                  officia reiciendis ullam molestias ducimus inventore illum iste amet, itaque minus vitae omnis sequi
-                  mollitia error?
+                <p> Hi! My name is Helmi, and i am a full stack developer with a technical background. My fascination with using logic and code to solve complex problems has since evolved into a passion to learn new technologies and apply them in the creation of useful web applications. As a developer, it is exciting to merge the data analysis of the backend with the creative presentation of the frontend to create a rich, meaningful user experiences. This challenge of continuously learning new technologies and figuring out creative solutions is something I look forward to as I continue to grow as a developer!
                 </p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reprehenderit sit rem consectetur
-                  magnam nam atque, ab cumque eveniet. Nostrum saepe ab dolor, unde cupiditate quidem iste laboriosam!
-                  Expedita quam accusantium qui dolor doloribus eius, laboriosam molestias perspiciatis dolorum nam
-                  sunt
-                  reiciendis sint rerum ipsum?</p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, atque.</p>
+                <p>Lifelong seeker of knowledge and Electronics and Industrial Computers graduate who currently has his sights set on a full-time web development position. Experienced in HTML5, CSS3, JavaScript, jQuery, Bootstrap, React, Firebase, Ionic Mobile Framework, Node Js, MySQL, MongoDB, Express & Handlebars JS. Superior knowledgeable in the sciences and proficient in French and Arabic.</p>
 
               </div>
             </div>
