--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,11 @@
                 <hr>
                 <section class="portfolio-section">
                         <div class="portfolio-item">
+                                <a href="https://lit-mountain-54448.herokuapp.com/">
+                                    <img src="./assets/images/Project2.JPG" alt="Image 1" width="300" height="300">
+                                    <h3>Project 2: Puppy Play Date</h3>
+                            </div>
+                        <div class="portfolio-item">
                                 <a href="https://bootcampp1t4.github.io/project1/">
                                     <img src="./assets/images/project1.JPG" alt="Image 1" width="300" height="300">
                                     <h3>Project 1: What Had Happenes Was...</h3>
